--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+  <title> america ya :D</title>
+<link rel="stylesheet" href="styles.css">
 <h1> America ya! :3 </h1>
 
 <h4> HELLO!!!! :D </h4>
@@ -8,3 +11,4 @@
     <img src="america.webp" alt="america ya">
 
       <img src="firefox_5DTegPdGrN.png" alt="america ya">
+  </html>
